parcel bundler works

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   <header>
   </header>
   <body>
-    <script src="sketch/videoTestSketch.ts"></script>
+    <script type="module" src="sketch/videoTestSketch.ts"></script>
   </body>
 </html>
